--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,14 @@
     <title>Native Rating WebComponent</title>
     <script type="module" src="rating.js"></script>
     <style>
-        body {
-            font-family: 'Montserrat', sans-serif;
+        html, body {
             margin: 0;
-            padding: 40px;
-            min-height: 100vh;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            font-family: 'Montserrat', sans-serif;
+        }
+        body {
             display: flex;
             justify-content: space-around;
             align-items: center;
