feat: update svg image

--- a/src/index.html
+++ b/src/index.html
@@ -24,26 +24,16 @@
             height: 60px;
             padding: 10px 0;
             width: 60px;
+        }   
+        my-rating.styled::part(icon) {
+            background-color: #ff584f;
         }
-        rnjs-rating::part(icon) {
-            width: 200px;
-            height: 200px;
-            background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 166 166"><polygon fill="rgb(165,255,214)" points="83 26.8 65.7 61.8 27.1 67.4 55 94.7 48.5 133.2 83 115 117.5 133.2 111 94.7 138.9 67.4 100.3 61.8 83 26.8 83 26.8"/></svg>');
-        }    
     </style>
 </head>
 <body>
     <my-rating></my-rating>
-
-    <my-rating class="blue">
-        <p>Rating :host(.blue)</p>
+    <my-rating class="styled" max-rating=10 rating=2>
+        <p>Styled Rating Web Component</p>
     </my-rating>
-
-    <main>
-        <my-rating>
-            <p>Rating :host-context(main)</p>
-            <img slot="rating-star" alt="" src="../assets/star_icon.png" />
-        </my-rating>
-    </main>
 </body>
 </html>
